--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5072,3 +5072,13 @@ table th {
   top: 10px;
   right: 20px;
 }
+
+.blurred {
+  filter: blur(5px);
+  opacity: 0.5;
+}
+
+.disabled-checkbox {
+  pointer-events: none;
+  opacity: 0.5;
+}
