--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5087,3 +5087,9 @@ table tr {
   pointer-events: none;
   opacity: 0.5;
 }
+
+
+.css-1ex1afd-MuiTableCell-root {
+
+  text-align: center !important;
+}
