--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -1,163 +1,265 @@
-@media (min-width: 1200px) and (max-width: 1499px) {
-	.email-form .select2-container {
-		width: 100% !important;
-	}
+/* General styles for all screen sizes */
+.email-form .select2-container {
+	width: 100% !important;
+}
 
-	.sign-in-page,
-	.sign-in-detail {
-		height: 100%;
-	}
+.sign-in-page,
+.sign-in-detail {
+	height: 100%;
+}
 
+.iq-search-bar .searchbox {
+	width: 350px;
+}
+
+body.sidebar-main-menu .iq-top-navbar {
+	width: calc(100% - 140px);
+}
+
+body.sidebar-main-menu .iq-top-navbar.fixed-header {
+	width: calc(100% - 80px);
+}
+
+body.sidebar-main-menu .content-page {
+	margin-left: 80px;
+	background: #eff7f8;
+	border-radius: 25px 0 0 25px;
+}
+
+body.sidebar-main-menu .iq-sidebar-logo {
+	width: 80px;
+}
+
+body.sidebar-main-menu .iq-sidebar .iq-sidebar-menu .iq-menu li a span,
+body.sidebar-main-menu .iq-sidebar-logo a span,
+body.sidebar-main-menu .iq-sidebar-menu .iq-menu li a .badge {
+	opacity: 0;
+	display: none;
+	transition: all 0.45s ease 0s;
+}
+
+body.sidebar-main-menu .iq-sidebar-menu .iq-menu .iq-menu-title span {
+	display: none;
+}
+
+body.sidebar-main-menu .iq-sidebar-menu .iq-menu .iq-menu-title i {
+	font-size: 20px;
+	display: block;
+}
+
+body.sidebar-main-menu .iq-menu-bt {
+	opacity: 0;
+	display: none;
+}
+
+body.sidebar-main-menu .iq-sidebar {
+	width: 80px;
+}
+
+body.sidebar-main-menu .iq-sidebar-menu .iq-menu li a .iq-arrow-right {
+	margin-right: 0;
+	display: none;
+}
+
+body.sidebar-main-menu .iq-sidebar:hover,
+body.sidebar-main-menu .iq-sidebar:hover .iq-sidebar-logo {
+	width: 260px;
+}
+
+body.sidebar-main-menu .iq-sidebar:hover .iq-sidebar-menu .iq-menu li a .iq-arrow-right {
+	margin-right: 0;
+	display: inline-block;
+}
+
+body.sidebar-main-menu .iq-sidebar:hover .iq-sidebar-menu .iq-menu li a span,
+body.sidebar-main-menu .iq-sidebar:hover .iq-sidebar-logo a span,
+body.sidebar-main-menu .iq-sidebar:hover .iq-sidebar-menu .iq-menu li a .badge,
+body.sidebar-main-menu .iq-sidebar:hover .iq-menu-bt {
+	opacity: 1;
+	display: inline-block;
+	transition: all 0.45s ease 0s;
+}
+
+body.sidebar-main-menu .iq-sidebar .iq-sidebar-menu .iq-menu li ul {
+	display: none;
+}
+
+body.sidebar-main-menu .iq-sidebar.sidebar-hover .iq-sidebar-menu .iq-menu li ul {
+	display: none;
+}
+
+body.sidebar-main-menu .iq-sidebar:hover+div.content-page {
+	margin-left: 260px;
+}
+
+body.sidebar-main-menu .iq-sidebar:hover+div.content-page .iq-top-navbar {
+	width: calc(100% - 310px);
+}
+
+body.sidebar-main-menu .iq-sidebar:hover+div.content-page .iq-top-navbar.fixed-header {
+	width: calc(100% - 260px);
+}
+
+body.sidebar-main-menu .iq-sidebar .iq-submenu li a {
+	font-size: 0;
+	padding: 12px 15px;
+}
+
+body.sidebar-main-menu .iq-sidebar:hover .iq-submenu li a {
+	font-size: 14px;
+}
+
+body.sidebar-main-menu.sidebar-main .iq-sidebar .iq-submenu li a {
+	font-size: 14px;
+}
+
+body.sidebar-main-menu.sidebar-main .iq-sidebar {
+	width: 260px;
+}
+
+body.sidebar-main-menu.sidebar-main .iq-sidebar-logo {
+	width: 260px;
+}
+
+body.sidebar-main-menu.sidebar-main .iq-menu-bt {
+	display: block;
+}
+
+body.sidebar-main-menu.sidebar-main .iq-sidebar .iq-sidebar-menu .iq-menu li a span,
+body.sidebar-main-menu.sidebar-main .iq-sidebar-logo a span,
+body.sidebar-main-menu.sidebar-main .iq-sidebar-menu .iq-menu li a .badge {
+	opacity: 1;
+	display: inline-block;
+}
+
+body.sidebar-main-menu.sidebar-main .content-page {
+	margin-left: 260px;
+}
+
+body.sidebar-main-menu.sidebar-main .iq-top-navbar {
+	width: calc(100% - 310px);
+}
+
+body.sidebar-main-menu.sidebar-main .iq-top-navbar.fixed-header {
+	width: calc(100% - 260px);
+}
+
+body.sidebar-main-menu.sidebar-main .iq-sidebar-menu .iq-menu li a .iq-arrow-right {
+	margin-right: 0;
+	display: block;
+}
+
+body.sidebar-main .iq-sidebar:hover+div.content-page {
+	margin-left: 260px;
+}
+
+body.sidebar-main .iq-sidebar:hover+div.content-page .iq-top-navbar {
+	width: calc(100% - 320px);
+}
+
+body.sidebar-main .iq-sidebar:hover+div.content-page .iq-top-navbar.fixed-header {
+	width: calc(100% - 260px);
+}
+
+/* Responsive styles for screens smaller than 1200px */
+@media (max-width: 1199px) {
 	.iq-search-bar .searchbox {
-		width: 350px;
+		width: 100%;
 	}
 
 	body.sidebar-main-menu .iq-top-navbar {
-		width: calc(100% - 140px);
-	}
-
-	body.sidebar-main-menu .iq-top-navbar.fixed-header {
 		width: calc(100% - 80px);
 	}
 
+	body.sidebar-main-menu .iq-top-navbar.fixed-header {
+		width: 100%;
+	}
+
 	body.sidebar-main-menu .content-page {
-		margin-left: 80px;
-		background: #eff7f8;
-		border-radius: 25px 0 0 25px;
+		margin-left: 0;
+		border-radius: 0;
 	}
 
 	body.sidebar-main-menu .iq-sidebar-logo {
 		width: 80px;
 	}
 
-	body.sidebar-main-menu .iq-sidebar .iq-sidebar-menu .iq-menu li a span,
-	body.sidebar-main-menu .iq-sidebar-logo a span,
-	body.sidebar-main-menu .iq-sidebar-menu .iq-menu li a .badge {
-		opacity: 0;
-		display: none;
-		transition: all 0.45s ease 0s;
+	body.sidebar-main-menu .iq-sidebar {
+		width: 80px;
 	}
 
-	body.sidebar-main-menu .iq-sidebar-menu .iq-menu .iq-menu-title span {
-		display: none;
+	body.sidebar-main-menu .iq-sidebar:hover+div.content-page {
+		margin-left: 80px;
 	}
 
-	body.sidebar-main-menu .iq-sidebar-menu .iq-menu .iq-menu-title i {
-		font-size: 20px;
-		display: block;
+	body.sidebar-main-menu .iq-sidebar:hover+div.content-page .iq-top-navbar {
+		width: calc(100% - 80px);
 	}
 
-	body.sidebar-main-menu .iq-menu-bt {
-		opacity: 0;
-		display: none;
+	body.sidebar-main-menu .iq-sidebar:hover+div.content-page .iq-top-navbar.fixed-header {
+		width: 100%;
+	}
+
+	body.sidebar-main-menu.sidebar-main .content-page {
+		margin-left: 80px;
+	}
+
+	body.sidebar-main-menu.sidebar-main .iq-top-navbar {
+		width: calc(100% - 80px);
+	}
+
+	body.sidebar-main-menu.sidebar-main .iq-top-navbar.fixed-header {
+		width: 100%;
+	}
+}
+
+/* Responsive styles for screens smaller than 768px */
+@media (max-width: 767px) {
+	.iq-search-bar .searchbox {
+		width: 100%;
+	}
+
+	body.sidebar-main-menu .iq-top-navbar {
+		width: 100%;
+	}
+
+	body.sidebar-main-menu .iq-top-navbar.fixed-header {
+		width: 100%;
+	}
+
+	body.sidebar-main-menu .content-page {
+		margin-left: 0;
+	}
+
+	body.sidebar-main-menu .iq-sidebar-logo {
+		width: 80px;
 	}
 
 	body.sidebar-main-menu .iq-sidebar {
 		width: 80px;
 	}
 
-	body.sidebar-main-menu .iq-sidebar-menu .iq-menu li a .iq-arrow-right {
-		margin-right: 0;
-		display: none;
-	}
-
-	body.sidebar-main-menu .iq-sidebar:hover,
-	body.sidebar-main-menu .iq-sidebar:hover .iq-sidebar-logo {
-		width: 260px;
-	}
-
-	body.sidebar-main-menu .iq-sidebar:hover .iq-sidebar-menu .iq-menu li a .iq-arrow-right {
-		margin-right: 0;
-		display: inline-block;
-	}
-
-	body.sidebar-main-menu .iq-sidebar:hover .iq-sidebar-menu .iq-menu li a span,
-	body.sidebar-main-menu .iq-sidebar:hover .iq-sidebar-logo a span,
-	body.sidebar-main-menu .iq-sidebar:hover .iq-sidebar-menu .iq-menu li a .badge,
-	body.sidebar-main-menu .iq-sidebar:hover .iq-menu-bt {
-		opacity: 1;
-		display: inline-block;
-		transition: all 0.45s ease 0s;
-	}
-
-	body.sidebar-main-menu .iq-sidebar .iq-sidebar-menu .iq-menu li ul {
-		display: none;
-	}
-
-	body.sidebar-main-menu .iq-sidebar.sidebar-hover .iq-sidebar-menu .iq-menu li ul {
-		display: none;
-	}
-
 	body.sidebar-main-menu .iq-sidebar:hover+div.content-page {
-		margin-left: 260px;
+		margin-left: 0;
 	}
 
 	body.sidebar-main-menu .iq-sidebar:hover+div.content-page .iq-top-navbar {
-		width: calc(100% - 310px);
+		width: 100%;
 	}
 
 	body.sidebar-main-menu .iq-sidebar:hover+div.content-page .iq-top-navbar.fixed-header {
-		width: calc(100% - 260px);
-	}
-
-	body.sidebar-main-menu .iq-sidebar .iq-submenu li a {
-		font-size: 0;
-		padding: 12px 15px;
-	}
-
-	body.sidebar-main-menu .iq-sidebar:hover .iq-submenu li a {
-		font-size: 14px;
-	}
-
-	body.sidebar-main-menu.sidebar-main .iq-sidebar .iq-submenu li a {
-		font-size: 14px;
-	}
-
-	body.sidebar-main-menu.sidebar-main .iq-sidebar {
-		width: 260px;
-	}
-
-	body.sidebar-main-menu.sidebar-main .iq-sidebar-logo {
-		width: 260px;
-	}
-
-	body.sidebar-main-menu.sidebar-main .iq-menu-bt {
-		display: block;
-	}
-
-	body.sidebar-main-menu.sidebar-main .iq-sidebar .iq-sidebar-menu .iq-menu li a span,
-	body.sidebar-main-menu.sidebar-main .iq-sidebar-logo a span,
-	body.sidebar-main-menu.sidebar-main .iq-sidebar-menu .iq-menu li a .badge {
-		opacity: 1;
-		display: inline-block;
+		width: 100%;
 	}
 
 	body.sidebar-main-menu.sidebar-main .content-page {
-		margin-left: 260px;
+		margin-left: 0;
 	}
 
 	body.sidebar-main-menu.sidebar-main .iq-top-navbar {
-		width: calc(100% - 310px);
+		width: 100%;
 	}
 
 	body.sidebar-main-menu.sidebar-main .iq-top-navbar.fixed-header {
-		width: calc(100% - 260px);
-	}
-
-	body.sidebar-main-menu.sidebar-main .iq-sidebar-menu .iq-menu li a .iq-arrow-right {
-		margin-right: 0;
-		display: block;
-	}
-
-	body.sidebar-main .iq-sidebar:hover+div.content-page {
-		margin-left: 260px;
-	}
-
-	body.sidebar-main .iq-sidebar:hover+div.content-page .iq-top-navbar {
-		width: calc(100% - 320px);
-	}
-
-	body.sidebar-main .iq-sidebar:hover+div.content-page .iq-top-navbar.fixed-header {
-		width: calc(100% - 260px);
+		width: 100%;
 	}
 }
