--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5136,3 +5136,18 @@ body.sidebar-main .iq-sidebar {
 .MuiTablePagination-actions{
   margin-bottom: 14px;
 }
+
+ 
+.custom-width-modal {
+    width: 600px;
+    height: 600px;
+    max-width: 100%;
+    max-height: 100%;
+
+}
+
+@media (max-width: 768px) {
+    .custom-width-modal {
+        width: 90%; /* Adjust width for smaller screens */
+    }
+}
