--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3325,6 +3325,8 @@ button.close-popup {
   border-radius: 15px !important;
   line-height: 22px;
   background-color: #FF0000;
+  border: none !important;
+  font-size: 11.8px !important;
 }
 
 .custom-switch.custom-switch-text .custom-control-label::before {
