--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5252,3 +5252,16 @@ body.sidebar-main .iq-sidebar {
 .MuiTablePagination-input {
   margin-top: -15px !important;
 }
+
+
+.modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  /* background-color: rgba(0, 0, 0, 0.5); */
+
+  backdrop-filter: blur(5px);
+  z-index: 99;
+}
