--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5191,9 +5191,9 @@ body.sidebar-main .iq-sidebar {
   /* Adjust color as needed */
 }
 
-.modal-content {
+/* .modal-content {
   margin-left: 12rem !important;
-}
+} */
 
 .MuiInputBase-input {
 
