--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5263,5 +5263,5 @@ body.sidebar-main .iq-sidebar {
   /* background-color: rgba(0, 0, 0, 0.5); */
 
   backdrop-filter: blur(5px);
-  z-index: 99;
+  /* z-index: 99; */
 }
