--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -168,6 +168,15 @@ body.sidebar-main .iq-sidebar:hover+div.content-page .iq-top-navbar.fixed-header
 
 	body.sidebar-main-menu .iq-sidebar {
 		width: 80px;
+		/* display: none; */
+	}
+
+	body.sidebar-main-menu.sidebar-main .iq-menu-bt {
+		display: block;
+		opacity: 1;
+	}
+
+	.iq-menu-bt-sidebar {
 		display: none;
 	}
 
@@ -185,8 +194,29 @@ body.sidebar-main .iq-sidebar:hover+div.content-page .iq-top-navbar.fixed-header
 
 }
 
+@media (min-width: 992px) {
+	.menusidebar {
+		display: none;
+	}
+}
+
 /* Responsive styles for screens smaller than 1200px */
 @media (max-width: 991px) {
+	.navbar {
+			
+			position: relative;
+			display: flex;
+			flex-wrap: wrap;
+			align-items: center;
+			justify-content: flex-end !important;
+			
+		}
+	.menusidebar {
+		border: none;
+		background: none;
+		font-size: 2rem;
+	}
+
 	.hover-circle {
 		opacity: 0;
 		position: absolute;
@@ -222,11 +252,12 @@ body.sidebar-main .iq-sidebar:hover+div.content-page .iq-top-navbar.fixed-header
 	}
 
 	body.sidebar-main-menu .iq-sidebar-logo {
-		width: 80px;
+		width: 0px;
 	}
 
 	body.sidebar-main-menu .iq-sidebar {
-		width: 80px;
+		width: 0px;
+
 	}
 
 	body.sidebar-main-menu .iq-sidebar:hover+div.content-page {
@@ -266,9 +297,11 @@ body.sidebar-main .iq-sidebar:hover+div.content-page .iq-top-navbar.fixed-header
 
 /* Responsive styles for screens smaller than 768px */
 @media (max-width: 767px) {
+
+
 	body.sidebar-main-menu .iq-sidebar {
-		width: 80px;
-		display: none;
+		width: 0px;
+
 	}
 
 	.iq-search-bar .searchbox {
@@ -288,11 +321,11 @@ body.sidebar-main .iq-sidebar:hover+div.content-page .iq-top-navbar.fixed-header
 	}
 
 	body.sidebar-main-menu .iq-sidebar-logo {
-		width: 80px;
+		width: 0px;
 	}
 
 	body.sidebar-main-menu .iq-sidebar {
-		width: 80px;
+		width: 0px;
 	}
 
 	body.sidebar-main-menu .iq-sidebar:hover+div.content-page {
@@ -372,7 +405,7 @@ body.sidebar-main .iq-sidebar:hover+div.content-page .iq-top-navbar.fixed-header
 	}
 
 	body.sidebar-main-menu .iq-top-navbar {
-		width: 100%;
+		width: 90%;
 	}
 
 	body.sidebar-main-menu .iq-top-navbar.fixed-header {
@@ -384,11 +417,11 @@ body.sidebar-main .iq-sidebar:hover+div.content-page .iq-top-navbar.fixed-header
 	}
 
 	body.sidebar-main-menu .iq-sidebar-logo {
-		width: 80px;
+		width: 0px;
 	}
 
 	body.sidebar-main-menu .iq-sidebar {
-		width: 80px;
+		width: 0px;
 	}
 
 	body.sidebar-main-menu .iq-sidebar:hover+div.content-page {
@@ -435,11 +468,11 @@ body.sidebar-main .iq-sidebar:hover+div.content-page .iq-top-navbar.fixed-header
 	}
 
 	body.sidebar-main-menu .iq-sidebar-logo {
-		width: 80px;
+		width: 0px;
 	}
 
 	body.sidebar-main-menu .iq-sidebar {
-		width: 80px;
+		width: 0px;
 	}
 
 	body.sidebar-main-menu .iq-sidebar:hover+div.content-page {
