--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5103,6 +5103,10 @@ a {
   background: #3f414d !important;
 }
 
+.MuiTable-root td :first-child {
+  display: none !important;
+}
+
 .tss-gm6zfk-MUIDataTableHeadCell-fixedHeader {
   position: -webkit-sticky;
   position: sticky;
