--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5169,6 +5169,9 @@ body.sidebar-main .iq-sidebar {
     width: 90%;
     /* Adjust width for smaller screens */
   }
+    .MuiTable-root td :first-child {
+      display: none !important;
+    }
 }
 
 .iq-card .iq-card-header {
