--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -203,14 +203,15 @@ body.sidebar-main .iq-sidebar:hover+div.content-page .iq-top-navbar.fixed-header
 /* Responsive styles for screens smaller than 1200px */
 @media (max-width: 991px) {
 	.navbar {
-			
-			position: relative;
-			display: flex;
-			flex-wrap: wrap;
-			align-items: center;
-			justify-content: flex-end !important;
-			
-		}
+
+		position: relative;
+		display: flex;
+		flex-wrap: wrap;
+		align-items: center;
+		justify-content: flex-end !important;
+
+	}
+
 	.menusidebar {
 		border: none;
 		background: none;
@@ -297,9 +298,10 @@ body.sidebar-main .iq-sidebar:hover+div.content-page .iq-top-navbar.fixed-header
 
 /* Responsive styles for screens smaller than 768px */
 @media (max-width: 767px) {
-	.MuiTable-root td :first-child {
-			display: none !important;
-		}
+	/* .MuiTable-root td :first-child {
+		display: none !important;
+	} */
+
 	body.sidebar-main-menu .iq-sidebar {
 		width: 0px;
 
