--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5291,3 +5291,7 @@ body.sidebar-main .iq-sidebar {
 button.btn.btn-primary.btn1 {
   margin-top: 21px !important;
 }
+
+.react-datepicker-wrapper {
+  width: 100% !important;
+}
