--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5295,3 +5295,11 @@ button.btn.btn-primary.btn1 {
 .react-datepicker-wrapper {
   width: 100% !important;
 }
+
+@media (max-width: 767px) {
+
+.col-md-2.ms-3.mt-4.strategy {
+    margin-bottom: 10px;
+  }
+
+}
