--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -396,8 +396,14 @@ body.sidebar-main .iq-sidebar:hover+div.content-page .iq-top-navbar.fixed-header
 		padding: 0px;
 	}
 
+	/* a.sign-in-logo.mb-5 {
+			margin-bottom: 10px !important;
+		} */
 	a.sign-in-logo.mb-5 {
 		margin-bottom: 10px !important;
+		background: #000;
+		border-radius: 24px;
+		padding-bottom: 14px;
 	}
 }
 
