--- a/public/assets/css/responsive.css
+++ b/public/assets/css/responsive.css
@@ -162,6 +162,12 @@ body.sidebar-main .iq-sidebar:hover+div.content-page .iq-top-navbar.fixed-header
 }
 
 @media (max-width: 991px) {
+
+	body.sidebar-main-menu .iq-sidebar:hover,
+	body.sidebar-main-menu .iq-sidebar:hover .iq-sidebar-logo {
+		width: 0px !important;
+	}
+
 	.navbar-nav .nav-item button.btn1 {
 		margin-top: 23px;
 	}
@@ -465,6 +471,10 @@ body.sidebar-main .iq-sidebar:hover+div.content-page .iq-top-navbar.fixed-header
 	}
 
 	body.sidebar-main-menu .iq-top-navbar {
+		width: 85%;
+	}
+
+	body.sidebar-main-menu .iq-top-navbar .fixed-header {
 		width: 100%;
 	}
 
@@ -558,4 +568,15 @@ body.sidebar-main .iq-sidebar:hover+div.content-page .iq-top-navbar.fixed-header
 	body.sidebar-main-menu.sidebar-main .iq-top-navbar.fixed-header {
 		width: 100%;
 	}
+}
+
+@media (max-width: 400px) {
+	.iq-top-navbar .iq-sub-dropdown {
+		left: 9%;
+	}
+
+	.fixed-header .iq-sub-dropdown {
+		left: auto !important;
+	}
+
 }
