--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5166,7 +5166,7 @@ body.sidebar-main .iq-sidebar {
 }
 
 @media (max-width: 900px) {
-  .MuiTable-root td :first-child {
+  .MuiTable-root td :nth-last-of-type(2) {
     display: none !important;
   }
 
@@ -5174,9 +5174,7 @@ body.sidebar-main .iq-sidebar {
     display: block !important;
   }
 
-  .MUIDataTableBodyCell-root td :first-child {
-    display: none;
-  }
+
 
 }
 
@@ -5277,16 +5275,18 @@ body.sidebar-main .iq-sidebar {
   margin-top: -15px !important;
 }
 
- 
+
 .lds-spinner {
   /* change color here */
   color: #1c4c5b
 }
+
 .lds-spinner,
 .lds-spinner div,
 .lds-spinner div:after {
   box-sizing: border-box;
 }
+
 .lds-spinner {
   color: currentColor;
   display: inline-block;
@@ -5294,10 +5294,12 @@ body.sidebar-main .iq-sidebar {
   width: 80px;
   height: 80px;
 }
+
 .lds-spinner div {
   transform-origin: 40px 40px;
   animation: lds-spinner 1.2s linear infinite;
 }
+
 .lds-spinner div:after {
   content: " ";
   display: block;
@@ -5309,62 +5311,77 @@ body.sidebar-main .iq-sidebar {
   border-radius: 20%;
   background: currentColor;
 }
+
 .lds-spinner div:nth-child(1) {
   transform: rotate(0deg);
   animation-delay: -1.1s;
 }
+
 .lds-spinner div:nth-child(2) {
   transform: rotate(30deg);
   animation-delay: -1s;
 }
+
 .lds-spinner div:nth-child(3) {
   transform: rotate(60deg);
   animation-delay: -0.9s;
 }
+
 .lds-spinner div:nth-child(4) {
   transform: rotate(90deg);
   animation-delay: -0.8s;
 }
+
 .lds-spinner div:nth-child(5) {
   transform: rotate(120deg);
   animation-delay: -0.7s;
 }
+
 .lds-spinner div:nth-child(6) {
   transform: rotate(150deg);
   animation-delay: -0.6s;
 }
+
 .lds-spinner div:nth-child(7) {
   transform: rotate(180deg);
   animation-delay: -0.5s;
 }
+
 .lds-spinner div:nth-child(8) {
   transform: rotate(210deg);
   animation-delay: -0.4s;
 }
+
 .lds-spinner div:nth-child(9) {
   transform: rotate(240deg);
   animation-delay: -0.3s;
 }
+
 .lds-spinner div:nth-child(10) {
   transform: rotate(270deg);
   animation-delay: -0.2s;
 }
+
 .lds-spinner div:nth-child(11) {
   transform: rotate(300deg);
   animation-delay: -0.1s;
 }
+
 .lds-spinner div:nth-child(12) {
   transform: rotate(330deg);
   animation-delay: 0s;
 }
+
 @keyframes lds-spinner {
   0% {
     opacity: 1;
   }
+
   100% {
     opacity: 0;
-  }}
-  
+  }
+}
+
 .modal {
   position: fixed;
   top: 0;
@@ -5434,9 +5451,10 @@ button.btn.btn-primary.btn1 {
 
 @media (max-width: 768px) {
   .MuiTableCell-root {
-    padding: 8px !important;  
+    padding: 8px !important;
   }
+
   .MuiCheckbox-root {
-    width: 40px;  
+    width: 40px;
   }
 }
