--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -5479,3 +5479,41 @@ button.btn.btn-primary.btn1 {
   background: #000 !important;
 
 }
+
+.custom-tabs .nav-link {
+  padding: 10px 20px;
+  font-size: 16px;
+  font-weight: 500;
+  color: #495057;
+}
+
+.custom-tabs .nav-link.active {
+  background-color: #535353;
+  color: white;
+  border-radius: 5px;
+}
+
+.tab-content {
+  background-color: #f8f9fa;
+  padding: 20px;
+  border-radius: 5px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+.wallet-balance-container {
+  font-size: 16px;
+  font-weight: bold;
+  margin: 10px 0;
+  display: flex;
+  align-items: center;
+}
+
+.balance-label {
+  margin-right: 8px;
+  color: #333;
+}
+
+.balance-amount {
+  color: #28a745; /* or any color you prefer for highlighting */
+  font-weight: 600;
+  font-size: 18px;
+}
